k8s/b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b-deploy
  namespace: pspd
spec:
  replicas: 1
  selector: { matchLabels: { app: b } }
  template:
    metadata: { labels: { app: b } }
    spec:
      containers:
        - name: b
          image: b-service:local
          imagePullPolicy: IfNotPresent
          ports: [ { containerPort: 50052 } ]
          readinessProbe: { tcpSocket: { port: 50052 }, initialDelaySeconds: 2, periodSeconds: 5 }
          livenessProbe:  { tcpSocket: { port: 50052 }, initialDelaySeconds: 5, periodSeconds: 10 }
---
apiVersion: v1
kind: Service
metadata:
  name: b-svc
  namespace: pspd
spec:
  selector: { app: b }
  ports: [ { port: 50052, targetPort: 50052 } ]
